--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="Images/IMG_1130.jpeg">
 
-    <link rel="stylesheet" href="/Users/harshaaccount/Desktop/Personal Website/CSS/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
